WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39016
[Qt] Regression(
r59152
): QGraphicsPageClient is not forwarding scroll and update events to view
https://bugs.webkit.org/show_bug.cgi?id=39016
Summary
[Qt] Regression(r59152): QGraphicsPageClient is not forwarding scroll and upd...
Antonio Gomes
Reported
2010-05-12 12:49:26 PDT
methods below miss view->scroll() and view->update() calls, respectively. void PageClientQGraphicsWidget::scroll(int dx, int dy, const QRect& rectToScroll) { #if USE(ACCELERATED_COMPOSITING) updateCompositingScrollPosition(); #endif } void PageClientQGraphicsWidget::update(const QRect & dirtyRect) { if (overlay) overlay->update(QRectF(dirtyRect)); #if USE(ACCELERATED_COMPOSITING) syncLayers(); #endif } kenneth has a patch...
Attachments
patch v1
(2.70 KB, patch)
2010-05-12 13:34 PDT
,
Antonio Gomes
laszlo.gombos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2010-05-12 13:34:41 PDT
Created
attachment 55892
[details]
patch v1
Antonio Gomes
Comment 2
2010-05-12 13:36:39 PDT
(In reply to
comment #1
)
> Created an attachment (id=55892) [details] > patch v1
just created the bug and uploaded the patch on behalf of kenneth. The fix is his.
Jesus Sanchez-Palencia
Comment 3
2010-05-12 13:39:45 PDT
(In reply to
comment #0
)
> methods below miss view->scroll() and view->update() calls, respectively.
Hmmm... my fault. =/ I had this on a previous version of that patch but something went wrong during all rounds of rebases and adding/removing APIs. =// Thanks for fixing this! The patch LGTM.
Laszlo Gombos
Comment 4
2010-05-12 16:19:29 PDT
Comment on
attachment 55892
[details]
patch v1 lgtm, r+.
Antonio Gomes
Comment 5
2010-05-13 07:54:26 PDT
***
Bug 39066
has been marked as a duplicate of this bug. ***
Antonio Gomes
Comment 6
2010-05-13 07:56:56 PDT
***
Bug 39069
has been marked as a duplicate of this bug. ***
Antonio Gomes
Comment 7
2010-05-13 11:57:44 PDT
Committed
r59377
: <
http://trac.webkit.org/changeset/59377
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug