Regression(r59152): QGraphicsPageClient is not forwarding scroll and update events to view https://bugs.webkit.org/show_bug.cgi?id=39016

Patch by Kenneth Rohde Christiansen <kenneth@webkit.org> on 2010-05-12
Reviewed by Laszlo Gombos.

Some forward calls got lost during the refatory.

* WebCoreSupport/PageClientQt.cpp:
(WebCore::PageClientQGraphicsWidget::scroll):
(WebCore::PageClientQGraphicsWidget::update):

Canonical link: https://commits.webkit.org/50566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59377 268f45cc-cd09-0410-ab3c-d52691b4dbfc